# glideator

./: .gitignore  LICENSE  README.md  docker-compose.dev.yml
agents/browser/: candidate_retrieval_results.jsonl  candidate_retrieval_results_1_24.jsonl  candidate_retrieval_results_25_50.jsonl  candidate_retrieval_results_51_133_inclerrors.jsonl  gemini.ipynb  pyproject.toml  run_candidate_retrieval.py  test.ipynb
agents/browser/batch_requests/: gemini_official_website_finder_attempt_1-1762345634_input.jsonl  gemini_official_website_finder_attempt_2-1762346159_input.jsonl
agents/browser/notebooks/: test.ipynb
agents/browser/src/: agents.py  batch.py  prompts.py  schemas.py  utils.py
agents/chat/: README.md  agent.py  app.py  config.py  env.example  pyproject.toml  requirements.txt  run.py  tracing.py
agents/chat/notebooks/: client.ipynb
agents/chat/prompts/: generic_assistant.md  parraglideator_neutral.md  parraglideator_themed.md
agents/ground_crew/: README.md  example_load.py  pyproject.toml
agents/ground_crew/ground_crew/: __init__.py  cli.py  db.py  extraction_io.py  io.py  site_resources_query.py  sites.py
agents/ground_crew/ground_crew/agent_runner/: __init__.py  agents.py  prompts.py  schemas.py  utils.py
agents/ground_crew/ground_crew/dashboard/: app.py  queries.py
agents/ground_crew/ground_crew/validation/: __init__.py  browser_check.py  io.py  models.py
agents/ground_crew/notebooks/: example_agent.ipynb
agents/ground_crew/outputs/: candidate_retrieval_results.jsonl  candidate_retrieval_results_full.jsonl  meteostation_results.jsonl  meteostation_results_2.jsonl  webcam_results.jsonl  webcam_results_2.jsonl
agents/ground_crew/sql/: db_schema_glideator_ground_crew.sql
agents/site_researcher/: README.md  requirements.txt  run_agent.py
agents/site_researcher/notebooks/: batch_report.ipynb  site_research_agent.ipynb
agents/site_researcher/src/: __init__.py  agents.py  batch.py  builders.py  nodes.py  prompts.py  schemas.py  utils.py
analytics/: README.md  glidenet.py  raw_flights.ipynb  requirements.txt  train.ipynb  utils.py
analytics/date_to_date/: __init__.py  data_io.py  evaluation.py  knn_index.py  metrics.py  preprocessing.py  settings.py  viz.py
analytics/meteo/: wind_direction.ipynb
analytics/raw_flights/: activity.ipynb  gliders.ipynb  launches.ipynb
analytics/raw_launches/: launches.ipynb
analytics/site_to_site/: ALS.ipynb  SVD.ipynb  als.py  contrastive.ipynb  contrastive.py  explore.ipynb  hyper_opt.py  metrics.py  plots.py  process.py  svd.py  utils.py
analytics/training/: LR_sweep.ipynb  README.md  evaluate.ipynb  fit_scalers.ipynb  grid_search.ipynb  io_optimization.ipynb  train.ipynb  training.py  utils.py
analytics/training/data_prep/: crate_fs_table.ipynb  crate_webdataset.ipynb
art/: parraglideator.md
backend/: .dockerignore  Dockerfile  Dockerfile.web  Dockerfile.worker  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  glideator.db  pytest.ini  requirements-web.txt  requirements-worker.txt  requirements.txt
backend/alembic/: README  env.py  script.py.mako
backend/alembic/versions/: 0001_baseline.py  0002_add_users.py  0003_profiles_and_favorites.py  0004_notifications.py  0005_scaled_features.py  0006_similar_dates.py  0007_forecast_change_notifs.py  0008_deterioration_threshold.py  0009_feedback_submissions.py  0010_drop_feedback_contact_email.py
backend/app/: cache.py  celery_app.py  celery_client.py  crud.py  database.py  main.py  mcp.py  models.py  schemas.py  security.py
backend/app/data/: flight_stats.csv  site_resources.json  sites.csv  sites_info.jsonl  spots.csv  tags.jsonl
backend/app/models/: d2d_scaler.pkl  glideator_model.pth  model.onnx  model.pth  net.pth  preprocessor.pkl  s2s_covisit_embeddings.pkl
backend/app/routers/: auth.py  d2d.py  favorites.py  feedback.py  llms.py  notifications.py  profiles.py  s2s.py  sites.py  trip_planning.py
backend/app/services/: d2d_similarity.py  flight_stats_loader.py  forecast.py  notifications.py  predict.py  push_delivery.py  s2s_recommender.py  sites_info_loader.py  sites_loader.py  spots_loader.py  tags_loader.py  trip_planner_service.py
backend/nginx/: nginx.conf
backend/tests/: conftest.py  test_auth_profiles_favorites.py  test_notifications.py  test_security_config.py  test_site_resources.py
db/: README.md  db_requirements.txt
db/glideator/: .user.yml  dbt_project.yml  profiles.yml
db/glideator/macros/: create_udfs.sql
db/glideator/seeds/: seed_launch_mapping.csv  seed_sites.csv
db/scripts/: gfs.py  gfs_file_downloader.py  load_flights.py  load_gfs.py  load_gfs_local.py  load_launches.py  load_spots.py  load_spots_raw.py  parse_spots.py  set_env.py
docs/adr/: 001-notification-system.md
frontend/: .dockerignore  Dockerfile.dev  README.md  package-lock.json  package.json
frontend/public/: _redirects  index.html  llms.txt  manifest.json  push-sw.js  robots.txt
frontend/scripts/: generate-llms.mjs  generate-sitemap.mjs  generate-sitemapl.js
frontend/src/: App.css  App.jsx  api.js  api.jsx  index.jsx  setupProxy.js
frontend/src/components/: Controls.js  D3Forecast.jsx  DateBoxes.css  DateBoxes.js  DateBoxes.jsx  DateBoxesControl.jsx  (+37 more)
gfs/: README.md  pyproject.toml
gfs/gfs/: constants.py  fetch.py  schema.json  utils.py
gfs/tests/: test_hist_vs_forecast.py
glideator/: scrapy.cfg
glideator/glideator/: items.py  middlewares.py  pipelines.py  settings.py
net/: README.md  pyproject.toml
net/net/: export.py  io.py  net.py  preprocessing.py
scrapers/: README.md  requirements.txt
scrapers/glideator/: middlewares.py  pipelines.py  settings.py
(+59 files in other folders)
