[tool.poetry]
name = "gfs"
version = "0.1.4"
description = ""
authors = ["Jan Helcl <janhelcl@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
xarray = "^2024.9.0"
netcdf4 = "^1.7.1.post2"
requests = "^2.32.3"
cfgrib = "^0.9.14.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
