[tool.poetry]
name = "net"
version = "0.1.1"
description = ""
authors = ["Jan Helcl <janhelcl@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.4.1"
torchrec = "^0.8.0"
numpy = "^2.1.1"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
