[tool.poetry]
name = "net"
version = "0.1.3"
description = ""
authors = ["Jan Helcl <janhelcl@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.1"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
torch = {version = "2.4.1", source = "pytorch_cpu"}
torchrec = {version = "0.8.0", source = "pytorch_cpu"}
fbgemm-gpu = {version = "0.8.0", source = "pytorch_cpu"}


[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
