[tool.poetry]
name = "net"
version = "0.4.0"
description = ""
authors = ["Jan Helcl <janhelcl@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.1"
pandas = "^2.2.3"
# Optional dependencies
torch = {version = "2.4.1", source = "pytorch_cpu", optional = true}
torchrec = {version = "0.8.0", source = "pytorch_cpu", optional = true}
fbgemm-gpu = {version = "0.8.0", source = "pytorch_cpu", optional = true}
onnxruntime = {version = "^1.16.0", optional = true}
onnx = {version = "^1.15.0", optional = true}

[tool.poetry.extras]
torch = ["torch", "torchrec", "fbgemm-gpu"]
onnx = ["onnxruntime", "onnx"]

[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
