[tool.poetry]
name = "ground-crew"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "*"}
psycopg = {extras = ["binary"], version = ">=3.2.1"}
SQLAlchemy = ">=2.0"
python-dotenv = "*"
pandas = "*"
tldextract = "*"
httpx = "*"
playwright = "*"  # remember: `playwright install chromium`
browser-use = "*"  # your agent framework
pydantic = ">=2.7"
psycopg2-binary = "^2.9.11"

[tool.poetry.scripts]
ground-crew = "ground_crew.cli:app"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
